# pytest-python-appium-framework

./: .ruff.toml  LICENSE  README.md  config.py  conftest.py  pyproject.toml
.github/workflows/: code_quality.yaml
config/: .env  settings.yaml
src/drivers/: android_driver.py  driver_factory.py  event_listener.py  ios_driver.py
src/locators/: locators.py
src/screens/: base_screen.py  element_interactor.py
src/screens/main/: main_screen.py
src/screens/main_screen/: main_screen.py
src/utils/: logger.py
tests/test_p1/: test_actions.py  test_p1.py
